maxTicks option for line graph, fix overlapping ticks in case of prime numbers as value count

--- a/mailscanner/style.css
+++ b/mailscanner/style.css
@@ -962,7 +962,7 @@ select.lang > option {
     width: auto;
     height: 180px;
     margin-top: -4px;
-    margin-bottom: -12px;
+    margin-bottom: 0px;
     margin-right: -2px;
-    margin-left: 3px;
+    margin-left: 4px;
 }
